--- a/pom.xml
+++ b/pom.xml
@@ -44,26 +44,24 @@
   		<artifactId>spring-boot-starter-web</artifactId>
   	</dependency>
   	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-devtools</artifactId>
+  		<scope>runtime</scope>
+  	</dependency><dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+  	</dependency><dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-test</artifactId>
+  		<scope>test</scope>
+  	</dependency><dependency>
   		<groupId>com.alibaba</groupId>
   		<artifactId>druid-spring-boot-starter</artifactId>
   		<version>1.1.10</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.ibeetl</groupId>
-  		<artifactId>beetl-framework-starter</artifactId>
-  		<version>1.1.56.RELEASE</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-tx</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+  	</dependency><dependency>
+  		<groupId>org.apache.shiro</groupId>
+  		<artifactId>shiro-spring-boot-web-starter</artifactId>
+  		<version>1.4.0</version>
   	</dependency>
   	<dependency>
   		<groupId>net.sourceforge.nekohtml</groupId>
@@ -74,28 +72,9 @@
   		<artifactId>mysql-connector-java</artifactId>
   	</dependency>
   	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-jdbc</artifactId>
-  	</dependency>
-  	<dependency>
   		<groupId>com.github.wxpay</groupId>
   		<artifactId>wxpay-sdk</artifactId>
   		<version>3.0.9</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-devtools</artifactId>
-  		<scope>runtime</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-test</artifactId>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.shiro</groupId>
-  		<artifactId>shiro-spring-boot-web-starter</artifactId>
-  		<version>1.4.0</version>
   	</dependency>
   	<dependency>
   		<groupId>com.smthit</groupId>
